        to an investigation by DM.
        
   o    New function setkeyv(DT,v) (v stands for vector) replaces
        key(DT)<-v syntax. Also added setattr() and setnames(). All
        documented in ?copy. 

        
USER VISIBLE CHANGES

   o    The loc argument of setkey has been removed. This wasn't very
        useful and didn't warrant a period of deprecation.
        

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.7   **
        **                                         **
        *********************************************

BUG FIXES

   o    Previous bug fix for random crash in R <= 2.13.2
        related to truelength and over-allocation didn't
        work, 3rd attempt. Thanks to Chris Neff for his
        patience and testing. This has shown up consistently
        as error status on CRAN old-rel checks (windows and
        mac). So if they pass, this issue is fixed.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.6   **
        **                                         **
        *********************************************

NEW FEATURES

   o    An empty list column can now be added with :=, and
        data.table() accepts empty list().
            DT[,newcol:=list()]
            data.table(a=1:3,b=list())
        Empty list columns contain NULL for all rows.
        
BUG FIXES

   o    Adding a column to a data.table loaded from disk could
        result in a memory corruption in R <= 2.13.2, revealed
        and thanks to CRAN checks on windows old-rel.
        
   o    Adding a factor column with a RHS to be recycled no longer
        loses its factor attribute, #1691. Thanks to Damian
        Betebenner for reporting.


        *********************************************
        **                                         **